force-app/main/default/objects/ICX_ProductEnquired__c/ICX_ProductEnquired__c.object-meta.xml
<CustomObject>
    <description>[ICONiCS] Qualification for a client for any channels (request / call / chat / social...)</description>
    <label>Qualification</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>