force-app/main/default/objects/ICX_ProductEnquired__c/fields/ClientContactPreference__c.field-meta.xml
<CustomField>
    <fullName>ClientContactPreference__c</fullName>
    <description>Same as Case.Contact_preference_from_client__c</description>
    <label>Client Contact Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>