force-app/main/default/objects/ICX_ProductEnquired__c/fields/ClientDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>ClientDesiredDate__c</fullName>
    <description>Same as Case.Desired_date_for_the_product__c</description>
    <label>Client Desired Date for the product</label>
    <type>Date</type>
</CustomField>