force-app/main/default/objects/ICX_ProductEnquired__c/fields/CreateRequest__c.field-meta.xml
<CustomField>
    <fullName>CreateRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[ICONiCS] Create a request after saving</description>
    <label>Create a request</label>
    <type>Checkbox</type>
</CustomField>