force-app/main/default/objects/ICX_ProductEnquired__c/fields/Follow_up_By_Call__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_By_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up By Call</label>
    <type>Checkbox</type>
</CustomField>