force-app/main/default/objects/ICX_ProductEnquired__c/fields/HotSku__c.field-meta.xml
<CustomField>
    <fullName>HotSku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Sku</label>
    <type>Checkbox</type>
</CustomField>