force-app/main/default/objects/ICX_ProductEnquired__c/fields/ParentRelatedTo__c.field-meta.xml
<CustomField>
    <fullName>ParentRelatedTo__c</fullName>
    <description>[ICONICS] Parent Related To (as a Salesforce Id).
Ex: Call with Products then a new Case is created with the same products (new records) and this field will get the parent record.
Note: length=50 where to match a value when the user is from the &quot;New&quot; button (Case list view). The value will be empty in the Case Creation flow.</description>
    <label>Parent RelatedTo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>