force-app/main/default/objects/ICX_ProductEnquired__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipName>Product_Enquired</relationshipName>
    <type>Lookup</type>
</CustomField>