force-app/main/default/objects/ICX_ProductEnquired__c/fields/Product_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Product_Unknown__c</fullName>
    <label>Product Sku Unknown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>