force-app/main/default/objects/ICX_ProductEnquired__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <description>Product category
Text field as the existing picklist for Case &gt; POD Product Category as values but not the same as Product Catalogue (or Product Referential)</description>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>