force-app/main/default/objects/ICX_ProductEnquired__c/fields/ProductCollection__c.field-meta.xml
<CustomField>
    <fullName>ProductCollection__c</fullName>
    <description>Product collection
Text field as Case &gt; Product collection has values in a picklist + Product Catalogue has other values + Product Referential has others values</description>
    <label>Product Collection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>