force-app/main/default/objects/ICX_ProductEnquired__c/fields/ProductCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProductCurrency__c</fullName>
    <description>ISO3 currency
Text field as the existing picklist for Case &gt; Product currency as some values are not in this field</description>
    <label>Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>