force-app/main/default/objects/ICX_ProductEnquired__c/fields/ProductGender__c.field-meta.xml
<CustomField>
    <fullName>ProductGender__c</fullName>
    <description>Product gender
Text field as a picklist is already maintain in the case &gt; product gender (and values are not align to Gender from Product Referential)</description>
    <label>Product Gender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>