force-app/main/default/objects/ICX_ProductEnquired__c/fields/ProductUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductUnitPrice__c</fullName>
    <description>Product unit price</description>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>