force-app/main/default/objects/ICX_ProductEnquired__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <description>[ICONiCS] As it&apos;s not possible to create a lookup for the Task object, this text field gets the Id of the Case or the Task.
Note: length=50 where to match a value when the user is from the &quot;New&quot; button (Case list view). The value will be empty in the Case Creation flow.</description>
    <label>Related To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>