force-app/main/default/objects/ICX_ProductEnquired__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Product_Enquired</relationshipName>
    <type>Lookup</type>
</CustomField>