force-app/main/default/objects/ICX_ProductEnquired__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RequestToStore</fullName>
                <label>Request To Store</label>
            </value>
            <value>
                <fullName>PODWithSKU</fullName>
                <label>Product on Demand (with SKU)</label>
            </value>
            <value>
                <fullName>PODWithoutSku</fullName>
                <label>Product on Demand (without SKU)</label>
            </value>
            <value>
                <fullName>OperationException</fullName>
                <label>Operation Exception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>