force-app/main/default/objects/ICX_ProductEnquired__c/fields/Retail_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store_Id__c</fullName>
    <formula>Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail Store Id</label>
    <type>Text</type>
</CustomField>