force-app/main/default/objects/ICX_ProductEnquired__c/fields/Store_ClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>Store_ClientAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client advisor in store (for request to store)</description>
    <label>Store Client Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>